--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -67,6 +67,10 @@ export const Default = (args, { argTypes }) => ({
                     <Typography type="body1" color="gray500">아이콘을 클릭하면 클립보드에 아이콘 이름이 복사됩니다.</Typography>
                     <!--small-->
                     <div>
+						<Typography type="body1" style="margin-bottom: 10px">XSmall</Typography>
+						<div style="display: flex; flex-wrap: wrap;">
+							<IconWrapper component="Icon" name="IconExportXSmallLine"/>
+						</div>
                         <Typography type="body1" style="margin-bottom: 10px">Small</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconProfileSmallLine"/>
