--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -65,49 +65,46 @@ export const Default = (args, { argTypes }) => ({
             template: `
                 <div>
                     <Typography type="body1" color="gray500">아이콘을 클릭하면 클립보드에 아이콘 이름이 복사됩니다.</Typography>
-                    <!--small-->
+                    <!--xsmall-->
                     <div>
 						<Typography type="body1" style="margin-bottom: 10px">XSmall</Typography>
 						<div style="display: flex; flex-wrap: wrap;">
-							<IconWrapper component="Icon" name="IconExportXSmallLine"/>
-						</div>
-                        <Typography type="body1" style="margin-bottom: 10px">Small</Typography>
-                        <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name="IconProfileSmallLine"/>
-                            <IconWrapper component="Icon" name="IconProfileSmallFill"/>
-                            <IconWrapper component="Icon" name="IconArrowSmallLine"/>
-                            <IconWrapper component="Icon" name="IconTextArrowSmallLine"/>
-                            <IconWrapper component="Icon" name="IconPlusSmallLine"/>
-                            <IconWrapper component="Icon" name="IconCloseSmallLine"/>
-                            <IconWrapper component="Icon" name="IconSearchSmallLine"/>
+                            <IconWrapper component="Icon" name="IconProfileXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconProfileXSmallFill"/>
+                            <IconWrapper component="Icon" name="IconArrowXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconTextArrowXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconPlusXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconCloseXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconSearchXSmallLine"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name="IconCheckSmallLine"/>
-                            <IconWrapper component="Icon" name="IconCheckRoundSmallLine"/>
-                            <IconWrapper component="Icon" name="IconCheckRoundSmallFill"/>
-                            <IconWrapper component="Icon" name="IconQuestionMarkSmallLine"/>
-                            <IconWrapper component="Icon" name="IconQuestionMarkSmallFill"/>
-                            <IconWrapper component="Icon" name="IconExclamationSmallLine"/>
-                            <IconWrapper component="Icon" name="IconExclamationSmallFill"/>
-                            <IconWrapper component="Icon" name="IconInformationSmallLine"/>
-                            <IconWrapper component="Icon" name="IconInformationSmallFill"/>
+                            <IconWrapper component="Icon" name="IconCheckXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconCheckRoundXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconCheckRoundXSmallFill"/>
+                            <IconWrapper component="Icon" name="IconQuestionMarkXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconQuestionMarkXSmallFill"/>
+                            <IconWrapper component="Icon" name="IconExclamationXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconExclamationXSmallFill"/>
+                            <IconWrapper component="Icon" name="IconInformationXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconInformationXSmallFill"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name="IconSettingSmallFill"/>
-                            <IconWrapper component="Icon" name="IconMegaphoneSmallLine"/>
-                            <IconWrapper component="Icon" name="IconStarSmallLine"/>
-                            <IconWrapper component="Icon" name="IconStarSmallFill"/>
-                            <IconWrapper component="Icon" name="IconFileSmallLine"/>
-                            <IconWrapper component="Icon" name="IconLinkSmallLine"/>
-                            <IconWrapper component="Icon" name="IconLikeSmallLine"/>
-                            <IconWrapper component="Icon" name="IconLikeSmallFill"/>
-                            <IconWrapper component="Icon" name="IconThreeDotSmallFill" />
+                            <IconWrapper component="Icon" name="IconSettingXSmallFill"/>
+                            <IconWrapper component="Icon" name="IconMegaphoneXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconStarXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconStarXSmallFill"/>
+                            <IconWrapper component="Icon" name="IconFileXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconLinkXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconLikeXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconLikeXSmallFill"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
-                            <IconWrapper component="Icon" name="IconBookmarkSmallLine"/>
-                            <IconWrapper component="Icon" name="IconBookmarkSmallFill"/>
-							<IconWrapper component='Icon' name="IconLoadingSmallFill" />
+                            <IconWrapper component="Icon" name="IconWritingXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkXSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkXSmallFill"/>
+                            <IconWrapper component="Icon" name="IconThreeDotXSmallFill" />
+                            <IconWrapper component='Icon' name="IconLoadingXSmallFill" />
+                            <IconWrapper component="Icon" name="IconExportXSmallLine"/>
                         </div>
                     </div>
                     <!--medium-->
