chore: 아이콘 크기 변경(Medium -> Small)

--- a/stories/components/dataEntry/Select.stories.mdx
+++ b/stories/components/dataEntry/Select.stories.mdx
@@ -166,7 +166,7 @@ export const Default = (args, { argTypes }) => ({
             data: () => ({
                 select1: 1,
                 select2: 1,
-                options1: [{label: '라벨1', value: 1}, {label: '라벨2', value: 2, icon: 'IconExportMediumLine'}],
+                options1: [{label: '라벨1', value: 1}, {label: '라벨2', value: 2, icon: 'IconExportSmallLine'}],
                 options2: [1, 2],
             }),
             template: `
