--- a/stories/components/general/button/Button.stories.mdx
+++ b/stories/components/general/button/Button.stories.mdx
@@ -218,31 +218,31 @@ export const Default = (args, { argTypes }) => ({
                   <div style="display: flex">
                     <Button color="primary" type="fill" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="primary" />
+                            <Icon name="IconPlusSmallLine" color="primary" />
                         </template>
                         Fill Primary
                     </Button>
                     <Button color="success" type="fill" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="success" />
+                            <Icon name="IconPlusSmallLine" color="success" />
                         </template>
                         Fill Success
                     </Button>
                     <Button color="error" type="fill" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="error" />
+                            <Icon name="IconPlusSmallLine" color="error" />
                         </template>
                         Fill Error
                     </Button>
                     <Button color="secondary" type="fill" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="secondary" />
+                            <Icon name="IconPlusSmallLine" color="secondary" />
                         </template>
                         Fill Secondary
                     </Button>
                     <Button color="info" type="fill" size="medium" disabled>
                       <template v-slot:left-icon>
-                        <Icon name="IconPlusMediumLine" color="secondary" />
+                        <Icon name="IconPlusSmallLine" color="secondary" />
                       </template>
                       Fill Info
                     </Button>
@@ -250,31 +250,31 @@ export const Default = (args, { argTypes }) => ({
                   <div style="display: flex">
                     <Button color="primary" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="primary" />
+                            <Icon name="IconPlusSmallLine" color="primary" />
                         </template>
                         Fill Primary
                     </Button>
                     <Button color="success" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="success" />
+                            <Icon name="IconPlusSmallLine" color="success" />
                         </template>
                         Fill Success
                     </Button>
                     <Button color="error" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="error" />
+                            <Icon name="IconPlusSmallLine" color="error" />
                         </template>
                         Fill Error
                     </Button>
                     <Button color="secondary" type="outline" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="secondary" />
+                            <Icon name="IconPlusSmallLine" color="secondary" />
                         </template>
                         Fill Secondary
                     </Button>
                     <Button color="info" type="outline" size="medium" disabled>
                       <template v-slot:left-icon>
-                        <Icon name="IconPlusMediumLine" color="secondary" />
+                        <Icon name="IconPlusSmallLine" color="secondary" />
                       </template>
                       Fill Info
                     </Button>
@@ -282,31 +282,31 @@ export const Default = (args, { argTypes }) => ({
                   <div style="display: flex">
                     <Button color="primary" type="text" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="primary" />
+                            <Icon name="IconPlusSmallLine" color="primary" />
                         </template>
                         Fill Primary
                     </Button>
                     <Button color="success" type="text" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="success" />
+                            <Icon name="IconPlusSmallLine" color="success" />
                         </template>
                         Fill Success
                     </Button>
                     <Button color="error" type="text" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="error" />
+                            <Icon name="IconPlusSmallLine" color="error" />
                         </template>
                         Fill Error
                     </Button>
                     <Button color="secondary" type="text" size="medium" disabled>
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="secondary" />
+                            <Icon name="IconPlusSmallLine" color="secondary" />
                         </template>
                         Fill Secondary
                     </Button>
                     <Button color="info" type="text" size="medium" disabled>
                       <template v-slot:left-icon>
-                        <Icon name="IconPlusMediumLine" color="secondary" />
+                        <Icon name="IconPlusSmallLine" color="secondary" />
                       </template>
                       Fill Info
                     </Button>
@@ -333,13 +333,13 @@ export const Default = (args, { argTypes }) => ({
                     </Button>
                     <Button color="primary" type="fill" size="medium">
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="white" />
+                            <Icon name="IconPlusSmallLine" color="white" />
                         </template>
                         Medium
                     </Button>
                     <Button color="primary" type="fill" size="large">
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusMediumLine" color="white" />
+                            <Icon name="IconPlusSmallLine" color="white" />
                         </template>
                         Large
                     </Button>
@@ -359,13 +359,13 @@ export const Default = (args, { argTypes }) => ({
                     </Button>
                     <Button color="primary" type="fill" size="medium">
                         <template v-slot:left-icon>
-                            <Icon name="IconExclamationMediumFill" color="white" />
+                            <Icon name="IconExclamationSmallFill" color="white" />
                         </template>
                         Medium
                     </Button>
                     <Button color="primary" type="fill" size="large">
                         <template v-slot:left-icon>
-                            <Icon name="IconExclamationMediumFill" color="white" />
+                            <Icon name="IconExclamationSmallFill" color="white" />
                         </template>
                         Large
                     </Button>
