--- a/stories/elements/core/icon/AnimationIcon.stories.mdx
+++ b/stories/elements/core/icon/AnimationIcon.stories.mdx
@@ -47,12 +47,12 @@ export const Default = (args, { argTypes }) => ({
             template: `
                 <div>
                     <Typography type="body1" color="gray500">아이콘을 클릭하면 클립보드에 아이콘 이름이 복사됩니다.</Typography>
-                    <!--medium-->
+                    <!--small-->
                     <div>
-                        <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
+                        <Typography type="body1" style="margin-bottom: 10px">Small</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="AnimationIcon" name="IconThreeDotMediumFillAnimation" :rotate="-90" />
-                            <IconWrapper component="AnimationIcon" name="IconCheckRoundMediumLineAnimation" :rotate="90" />
+                            <IconWrapper component="AnimationIcon" name="IconThreeDotSmallFillAnimation" :rotate="-90" />
+                            <IconWrapper component="AnimationIcon" name="IconCheckRoundSmallLineAnimation" :rotate="90" />
                         </div>
                     </div>
                 </div>
