--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -107,82 +107,82 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconExportXSmallLine"/>
                         </div>
                     </div>
-                    <!--medium-->
+                    <!--small-->
                     <div>
-                        <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
+                        <Typography type="body1" style="margin-bottom: 10px">Small</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                          <IconWrapper component="Icon" name="IconProfileMediumLine" />
-                          <IconWrapper component="Icon" name="IconProfileMediumFill" />
-                          <IconWrapper component="Icon" name="IconQuestionMediumLine" />
-                          <IconWrapper component="Icon" name="IconEssayMediumLine" />
-                          <IconWrapper component="Icon" name="IconInterviewMediumLine" />
-                          <IconWrapper component="Icon" name="IconCommentMediumLine" />
-                          <IconWrapper component="Icon" name="IconResumeMediumLine" />
-                          <IconWrapper component="Icon" name="IconAnalyticsMediumLine" />
+                            <IconWrapper component="Icon" name="IconProfileSmallLine" />
+                            <IconWrapper component="Icon" name="IconProfileSmallFill" />
+                            <IconWrapper component="Icon" name="IconQuestionSmallLine" />
+                            <IconWrapper component="Icon" name="IconEssaySmallLine" />
+                            <IconWrapper component="Icon" name="IconInterviewSmallLine" />
+                            <IconWrapper component="Icon" name="IconCommentSmallLine" />
+                            <IconWrapper component="Icon" name="IconResumeSmallLine" />
+                            <IconWrapper component="Icon" name="IconAnalyticsSmallLine" />
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
-                          <IconWrapper component="Icon" name="IconArrowMediumLine" />
-                          <IconWrapper component="Icon" name="IconTextArrowMediumLine" />
-                          <IconWrapper component="Icon" name="IconRevertMediumLine" />
-                          <IconWrapper component="Icon" name="IconPlusMediumLine" />
-                          <IconWrapper component="Icon" name="IconMinusMediumLine" />
-                          <IconWrapper component="Icon" name="IconCloseMediumLine" />
-                          <IconWrapper component="Icon" name="IconFilterMediumLine" />
-                          <IconWrapper component="Icon" name="IconBookmarkMediumLine" />
-                          <IconWrapper component="Icon" name="IconBookmarkMediumFill" />
+                            <IconWrapper component="Icon" name="IconArrowSmallLine" />
+                            <IconWrapper component="Icon" name="IconTextArrowSmallLine" />
+                            <IconWrapper component="Icon" name="IconRevertSmallLine" />
+                            <IconWrapper component="Icon" name="IconPlusSmallLine" />
+                            <IconWrapper component="Icon" name="IconMinusSmallLine" />
+                            <IconWrapper component="Icon" name="IconCloseSmallLine" />
+                            <IconWrapper component="Icon" name="IconFilterSmallLine" />
+                            <IconWrapper component="Icon" name="IconBookmarkSmallLine" />
+                            <IconWrapper component="Icon" name="IconBookmarkSmallFill" />
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
-                          <IconWrapper component="Icon" name="IconCheckMediumLine" />
-                          <IconWrapper component="Icon" name="IconCheckRoundMediumLine" />
-                          <IconWrapper component="Icon" name="IconCheckRoundMediumFill" />
-                          <IconWrapper component="Icon" name="IconQuestionMarkMediumLine" />
-                          <IconWrapper component="Icon" name="IconQuestionMarkMediumFill" />
-                          <IconWrapper component="Icon" name="IconExclamationMediumLine" />
-                          <IconWrapper component="Icon" name="IconExclamationMediumFill" />
-                          <IconWrapper component="Icon" name="IconInformationMediumLine" />
-                          <IconWrapper component="Icon" name="IconInformationMediumFill" />
-                          <IconWrapper component="Icon" name="IconCloseRoundMediumLine" />
-                          <IconWrapper component="Icon" name="IconCloseRoundMediumFill" />
-                          <IconWrapper component="Icon" name="IconPlusRoundMediumLine" />
-                          <IconWrapper component="Icon" name="IconArrowRoundMediumLine" />
+                            <IconWrapper component="Icon" name="IconCheckSmallLine" />
+                            <IconWrapper component="Icon" name="IconCheckRoundSmallLine" />
+                            <IconWrapper component="Icon" name="IconCheckRoundSmallFill" />
+                            <IconWrapper component="Icon" name="IconQuestionMarkSmallLine" />
+                            <IconWrapper component="Icon" name="IconQuestionMarkSmallFill" />
+                            <IconWrapper component="Icon" name="IconExclamationSmallLine" />
+                            <IconWrapper component="Icon" name="IconExclamationSmallFill" />
+                            <IconWrapper component="Icon" name="IconInformationSmallLine" />
+                            <IconWrapper component="Icon" name="IconInformationSmallFill" />
+                            <IconWrapper component="Icon" name="IconCloseRoundSmallLine" />
+                            <IconWrapper component="Icon" name="IconCloseRoundSmallFill" />
+                            <IconWrapper component="Icon" name="IconPlusRoundSmallLine" />
+                            <IconWrapper component="Icon" name="IconArrowRoundSmallLine" />
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
-                          <IconWrapper component="Icon" name="IconLockMediumLine" />
-                          <IconWrapper component="Icon" name="IconLockMediumFill" />
-                          <IconWrapper component="Icon" name="IconImportMediumLine" />
-                          <IconWrapper component="Icon" name="IconLinkMediumLine" />
-                          <IconWrapper component="Icon" name="IconDownloadMediumLine" />
-                          <IconWrapper component="Icon" name="IconTrashMediumLine" />
-                          <IconWrapper component="Icon" name="IconLikeMediumLine" />
-                          <IconWrapper component="Icon" name="IconLikeMediumFill" />
-                          <IconWrapper component="Icon" name="IconBrowseMediumLine" />
-                          <IconWrapper component="Icon" name="IconBrowseMediumFill" />
-                          <IconWrapper component="Icon" name="IconExportMediumLine" />
-                          <IconWrapper component="Icon" name="IconVideoMediumLine" />
-                          <IconWrapper component="Icon" name="IconVideoMediumFill" />
+                            <IconWrapper component="Icon" name="IconLockSmallLine" />
+                            <IconWrapper component="Icon" name="IconLockSmallFill" />
+                            <IconWrapper component="Icon" name="IconImportSmallLine" />
+                            <IconWrapper component="Icon" name="IconLinkSmallLine" />
+                            <IconWrapper component="Icon" name="IconDownloadSmallLine" />
+                            <IconWrapper component="Icon" name="IconTrashSmallLine" />
+                            <IconWrapper component="Icon" name="IconLikeSmallLine" />
+                            <IconWrapper component="Icon" name="IconLikeSmallFill" />
+                            <IconWrapper component="Icon" name="IconBrowseSmallLine" />
+                            <IconWrapper component="Icon" name="IconBrowseSmallFill" />
+                            <IconWrapper component="Icon" name="IconExportSmallLine" />
+                            <IconWrapper component="Icon" name="IconVideoSmallLine" />
+                            <IconWrapper component="Icon" name="IconVideoSmallFill" />
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
-                          <IconWrapper component="Icon" name="IconClockMediumLine" />
-                          <IconWrapper component="Icon" name="IconClockMediumFill" />
-                          <IconWrapper component="Icon" name="IconPriceMediumLine" />
-                          <IconWrapper component="Icon" name="IconDiscountMediumLine" />
-                          <IconWrapper component="Icon" name="IconLocationMediumLine" />
-                          <IconWrapper component="Icon" name="IconLocationMediumFill" />
-                          <IconWrapper component="Icon" name="IconSupportMediumLine" />
-                          <IconWrapper component="Icon" name="IconCouponMediumLine" />
-                          <IconWrapper component="Icon" name="IconMegaphoneMediumLine" />
-                          <IconWrapper component="Icon" name="IconStarMediumLine" />
-                          <IconWrapper component="Icon" name="IconStarMediumFill" />
-                          <IconWrapper component="Icon" name="IconThreeDotMediumFill" />
+                            <IconWrapper component="Icon" name="IconClockSmallLine" />
+                            <IconWrapper component="Icon" name="IconClockSmallFill" />
+                            <IconWrapper component="Icon" name="IconPriceSmallLine" />
+                            <IconWrapper component="Icon" name="IconDiscountSmallLine" />
+                            <IconWrapper component="Icon" name="IconLocationSmallLine" />
+                            <IconWrapper component="Icon" name="IconLocationSmallFill" />
+                            <IconWrapper component="Icon" name="IconSupportSmallLine" />
+                            <IconWrapper component="Icon" name="IconCouponSmallLine" />
+                            <IconWrapper component="Icon" name="IconMegaphoneSmallLine" />
+                            <IconWrapper component="Icon" name="IconStarSmallLine" />
+                            <IconWrapper component="Icon" name="IconStarSmallFill" />
+                            <IconWrapper component="Icon" name="IconThreeDotSmallFill" />
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
-                          <IconWrapper component="Icon" name="IconFileMediumLine" />
-                          <IconWrapper component="Icon" name="IconSirenMediumLine" />
-                          <IconWrapper component="Icon" name="IconBlockMediumLine" />
-                          <IconWrapper component="Icon" name="IconUnblockMediumLine" />
-                          <IconWrapper component="Icon" name="IconWritingMediumLine" />
-                          <IconWrapper component="Icon" name="IconVodMediumLine" />
-                          <IconWrapper component="Icon" name="IconDateMediumLine" />
+                            <IconWrapper component="Icon" name="IconFileSmallLine" />
+                            <IconWrapper component="Icon" name="IconSirenSmallLine" />
+                            <IconWrapper component="Icon" name="IconBlockSmallLine" />
+                            <IconWrapper component="Icon" name="IconUnblockSmallLine" />
+                            <IconWrapper component="Icon" name="IconWritingSmallLine" />
+                            <IconWrapper component="Icon" name="IconVodSmallLine" />
+                            <IconWrapper component="Icon" name="IconDateSmallLine" />
                         </div>
                     </div>
                     <!--large-->
