feat: Medium 아이콘 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -185,6 +185,16 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconDateSmallLine" />
                         </div>
                     </div>
+                    <!--medium-->
+                    <div>
+                        <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
+                        <div style="display: flex; flex-wrap: wrap;">
+                          <IconWrapper component="Icon" name="IconLikeMediumLine" />
+                          <IconWrapper component="Icon" name="IconLikeMediumFill" />
+                          <IconWrapper component="Icon" name="IconArrowUpRoundMediumLine" />
+                          <IconWrapper component="Icon" name="IconArrowUpRoundMediumFill" />
+                        </div>
+                    </div>
                     <!--large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Large</Typography>
