fix: 아이콘 크기 변경

--- a/stories/components/general/button/IconButton.stories.mdx
+++ b/stories/components/general/button/IconButton.stories.mdx
@@ -101,7 +101,7 @@ export const Default = (args, { argTypes }) => ({
                 return {
                     exampleData: [
                         {
-                            iconName: 'IconBookmarkMediumFill',
+                            iconName: 'IconBookmarkSmallFill',
                             iconSize: 'small'
                         },
                         {
