--- a/stories/components/message/Alert.stories.mdx
+++ b/stories/components/message/Alert.stories.mdx
@@ -91,7 +91,7 @@ export const Default = (args, { argTypes }) => ({
             `,
             computed: {
                 customIconName() {
-                    return this.isMobile ? 'IconStarMediumFill' : 'IconStarLargeFill';
+                    return this.isMobile ? 'IconStarSmallFill' : 'IconStarLargeFill';
                 }
             },
             components: { Alert, Icon },
