--- a/stories/elements/core/Typography.stories.mdx
+++ b/stories/elements/core/Typography.stories.mdx
@@ -113,6 +113,7 @@ export const Default = (args, { argTypes }) => ({
                     <Typography element="h4" type="headline4">Headline4</Typography>
                     <Typography element="h5" type="headline5">Headline5</Typography>
                     <Typography element="h6" type="headline6">Headline6</Typography>
+                    <Typography element="h6" type="headline7">Headline7</Typography>
                     <Typography type="body1">Body1 - p : 본문에 사용합니다.</Typography>
                     <Typography type="body2">Body2 - 본문과 함께 보이는 댓글에 사용합니다. 본문과 분리된 (직부캠 후기, 직부캠 커뮤니티)의 경우 본문 사이즈 중 자유롭게 사용합니다.</Typography>
                     <Typography type="caption1">Caption1</Typography>
