fix: ChipGroup 두줄일 때 하단 여백이 없는 오류 수정

--- a/stories/components/dataDisplay/ChipGroup.stories.mdx
+++ b/stories/components/dataDisplay/ChipGroup.stories.mdx
@@ -87,9 +87,7 @@ export const Basic = (args, { argTypes }) => ({
                          </StyleCol>
                          <StyleCol :col-sm="12">
                              <ChipGroup size="large">
-                                <Chip type="fill" color="success" size="large">Chip</Chip>
-                                <Chip type="outline" color="success" size="large">Chip</Chip>
-                                <Chip type="fill" color="success" size="large">Chip</Chip>
+                                <Chip v-for="item in 30" :key="item" :type="item % 2 === 0 ? 'fill' : 'outline'" color="success" size="large">Chip</Chip>
                              </ChipGroup>
                              <hr/>
                          </StyleCol>
