--- a/stories/components/general/headers/SubHeader.stories.mdx
+++ b/stories/components/general/headers/SubHeader.stories.mdx
@@ -100,7 +100,7 @@ export const Default = (args, {argTypes}) => ({
            :is-transparent="isTransparent"
            :is-nuxt="isNuxt"
            :items="items"
-                   :style="{'--triggered-top': '0 !important'}"
+           :style="{'--triggered-top': '0 !important'}"
 />
 </div>
     </div>`,
@@ -108,7 +108,7 @@ export const Default = (args, {argTypes}) => ({
 
 # SubHeader
 
-**SubHeader** 컴포넌의 문서입니다.
+**SubHeader** 컴포넌트의 문서입니다.
 
 <Story name="Default" height="100px">
   {Default.bind({})}
