chore: 컴포넌트 위계 정리

--- a/stories/components/navigation/SubHeader.stories.mdx
+++ b/stories/components/navigation/SubHeader.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
 
-import SubHeader from '@/components/components/general/headers/SubHeader';
+import SubHeader from '@/components/components/navigation/SubHeader';
 
 <Meta
-  title="General/Headers/SubHeader"
+  title="Navigation/SubHeader"
   component={SubHeader}
   argTypes={{
     isAppear: {
