--- a/stories/components/navigation/TopBar.stories.mdx
+++ b/stories/components/navigation/TopBar.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
-import TopBar from '@/components/components/general/headers/TopBar';
+import TopBar from '@/components/components/navigation/TopBar';
 import IconButton from '@/components/components/general/button/IconButton';
 
 <Meta
-  title="General/Headers/TopBar"
+  title="Navigation/TopBar"
   component={TopBar}
   argTypes={{
     isTransparent: {
