--- a/stories/components/navigation/SearchTopBar.stories.mdx
+++ b/stories/components/navigation/SearchTopBar.stories.mdx
@@ -1,8 +1,8 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
-import SearchTopBar from '@/components/components/general/headers/SearchTopBar';
+import SearchTopBar from '@/components/components/navigation/SearchTopBar';
 
 <Meta
-  title="General/Headers/SearchTopBar"
+  title="Navigation/SearchTopBar"
   component={SearchTopBar}
   argTypes={{
     isTransparent: {
